ADD: shell sort modified: directory structure change

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Sort</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>SortJS</title>
 </head>
 <body>
     <h1 id="js-title" class="title">SORT</h1>
@@ -26,6 +26,6 @@
         <button id="js-shuffle">Shuffle</button>
         <button id="js-initialize">Initialize</button>
     </div>
-    <script src="graph.js"></script>
+    <script src="js/graph.js"></script>
 </body>
 </html>
