--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         <button id="js-shuffle">Shuffle</button>
         <button id="js-initialize">Initialize</button>
     </div>
-    <script src="js/graph.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
