--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <option value="insert">Insertion Sort</option>
         <option value="shell">Shell Sort</option>
         <option value="quick">Quick Sort</option>
-        <option value="merge">Merge Sort</option>
+        <!-- <option value="merge">Merge Sort</option>
         <option value="heap">Heap Sort</option>
-        <option value="counting">Counting Sort</option>
+        <option value="counting">Counting Sort</option> -->
     </select>
     <div class="delay">
         Delay<input type="range" id="js-range" min="1" max="200" value="10" step="1">
